# Sungrow-Modbus

./: .gitignore  LICENSE  README.md  SungrowModbusTcpClient.py  __init__.py  pyproject.toml  setup.py
.github/workflows/: python-tests.yml
SungrowModbusTCPClient/: SungrowModbusTcpClient.py
SungrowModbusTcpClient/: SungrowModbusTcpClient.py
custom_components/: sungrow_sg4k.yaml
custom_components/sungrowmodbus/: __init__.py  const.py  manifest.json  modbus.py  sensor.py  sungrow.py  validators.py
tests/: test_modbus_server.py
